# nekodict

./: .gitignore  README.md  pyproject.toml
nekodict/: __main__.py
